# kirikiroid2_fork3

./: CMakeLists.txt  Makefile  README.md
_testdata/savedata/: data999.ksd  datasu.ksd
cocos2d/cocos/: cocos2d.cpp
cocos2d/cocos/platform/android/: javaactivity-android.cpp
cocos2d/cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxLocalStorage.java
cocos2d/cocos/platform/android/libcocos2dx/: build.gradle
cocos2d/cocos/platform/linux/: CCFileUtils-linux.h
proj.android/: gradle.properties
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/src/org/tvp/kirikiri2n/: KR2Activity.java  MediaStoreHack.java
proj.linux/: build.sh  main.cpp
src/core/: CMakeLists.txt
src/core/base/: 7zArchive.cpp  UtilStreams.cpp
src/core/base/win32/: StorageImpl.cpp  SysInitImpl.cpp
src/core/environ/: Application.cpp  DumpSend.cpp  XP3ArchiveRepack.cpp  XP3ArchiveRepack.h
src/core/environ/android/: AndroidUtils.cpp
src/core/environ/cocos2d/: CustomFileUtils.cpp
src/core/environ/linux_special/: LinuxCommon.cpp
src/core/environ/ui/: MainFileSelectorForm.cpp
src/core/movie/ffmpeg/: BaseRenderer.h  VideoPlayer.h
src/core/sound/: FFWaveDecoder.cpp  WaveIntf.cpp
src/core/sound/win32/: WaveMixer.cpp  tvpsnd.cpp
src/core/tjs2/: tjsConfig.cpp  tjsString.h  tjsUtils.h  tjsVariantString.cpp
src/core/utils/: CCEmote.cpp  CCEmote.h
src/core/visual/: LoadBPG.cpp  LoadJPEG.cpp  LoadJXR.cpp  RenderManager.h
src/core/visual/ARM/: tvpgl_arm.cpp
src/core/visual/ogl/: RenderManager_ogl.cpp  etcpak.h  ogl_common.h  pvrtc.cpp
src/core/visual/win32/: VideoOvlImpl.cpp
src/plugins/: CMakeLists.txt  layerExMovie.cpp
